--- a/index.html
+++ b/index.html
@@ -1,61 +1,109 @@
-<!doctype html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Fun with fonts</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="css/hover-min.css">
-	<link href='http://fonts.googleapis.com/css?family=Raleway:100,200,600,700' rel='stylesheet' type='text/css'>
-</head>
-<body>
-		<div id="layout">
-			<h1 class="fontawesome"> Shwetha's Blah Site </h1>
-			<p> Weekly dose of blah from your homegirl. Recipes, Blogs, Movie Reviews and "Stuff" </p>
-		<div id="latestnews">
-						<h2 class="ln">Latest news and videos</h2>
-					</div>
-				<p class="p1"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, enim, ut, eius tempore unde similique possimus mollitia nostrum eum magnam quaerat in odio officiis nemo dignissimos obcaecati earum autem deserunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, repellendus, molestiae, ab consequuntur perspiciatis amet omnis maiores sequi quis blanditiis quam magni eius aliquid nobis rerum cum expedita quas.Quam.
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, ipsam tempora itaque fugit pariatur consequuntur quia placeat molestias! Est amet libero eos laborum necessitatibus quo a eligendi unde aperiam debitis.
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, itaque, odio, ipsa, atque illo officiis voluptatum perferendis quod labore maiores impedit voluptatem ex porro! Unde fugit odit voluptatibus odio a. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, dignissimos ea similique cumque sed quisquam inventore laudantium vel amet pariatur. Non officia ea quisquam quas illo doloribus soluta illum numquam.</p>
+	<!doctype html>
+	<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>Shwetha's blah site</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="css/hover-min.css">
+		<link href='http://fonts.googleapis.com/css?family=Raleway:100,200,600,700' rel='stylesheet' type='text/css'>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	</head>
+	<body>
+		<div id="headerover">
+			<h1> Shwetha's Blah Site </h1>
+			<p class="p2"> Weekly dose of blah from your homegirl. Recipes, Blogs, Movie Reviews and "Stuff" </p>
+			<div id="logo">
+				<h2>This is where your logo will go</h2>
+			</div>
+			<div class="navbar">
+				<section class="Home grow"> 
+					<h2> Home </h2>
+				</section>
+				<hr>
 
-					<div class="navbar">
-						<section class="Home grow"> 
-						<h2> Home </h2>
-						</section>
-						<hr>
+				<section class="Posts grow"> 
+					<h2> Posts </h2>
+				</section>
+				<hr>
 
-							<section class="Posts grow"> 
-							<h2> Posts </h2>
-							</section>
-							<hr>
+				<section class="Recipes grow"> 
+					<h2> Recipes </h2>
+				</section>
 
-								<section class="Recipes grow"> 
-								<h2> Recipes </h2>
-								</section>
+				<hr>
 
-								<hr>
-
-									<section class="Blog posts and videos grow"> 
-									<h2> Blog posts and videos </h2>
-									</section>
-									<hr>
-									<section class="Movie and Music Reviews">
-									<h2>Photos and social events</h2>
-								</section>
-								<hr>
-								<section class="Contact Us grow">
-									<h2> Contact Us </h2>
-								</section>
-					</div>
-
-<div id="footer">
-	<i class="fa fa-facebook-square fa-5x pop"> </i>
-			<i class="fa fa-twitter-square fa-5x pop"></i>
-			<i class="fa fa-flickr fa-5x pop"></i>
-			<i class="fa fa-pinterest fa-5x pop"></i>
-			<i class="fa fa-tumblr-square fa-5x pop"></i>
+				<section class="Blog posts and videos grow"> 
+					<h2> Blog posts and videos </h2>
+				</section>
+				<hr>
+				<section class="Movie and Music Reviews grow">
+					<h2>Movie and Music Reviews</h2>
+				</section>
+				<hr>
+				<section class="Contact Us grow">
+					<h2> Contact Us </h2>
+				</section>
+			</div>
 		</div>
-</div>
-</body>
-</html>
+			<div id="blocks">
+				<section class="block1 pop">				
+					<h2> Your awesome <br> heading </h2>
+				<p class="stylep">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, enim, ut, eius tempore unde similique possimus mollitia nostrum eum magnam quaerat in odio officiis nemo dignissimos obcaecati earum <a href="https://thinkingsp0t.wordpress.com" target="_blank">Read more. </a>
+				</section>
+
+				<section class="block2 pop">
+					<h2>Your awesome<br> heading </h2>
+
+					<p class="stylep">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, ipsam tempora itaque fugit pariatur consequuntur quia placeat molestias! Est amet libero eos laborum necessitatibus quo a eligendi unde aperiam debitis.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, itaque, odio, ipsa, atque illo officiis voluptatum perferendis quod labore maiores impedit voluptatem ex porro! Unde fugit odit voluptatibus odio a. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, dignissimos ea similique cumque sed quisquam inventore laudantium vel amet pariatur. Non officia ea quisquam quas illo doloribus soluta illum numquam. <a href="https://thinkingsp0t.wordpress.com" target="_blank"> Read more </a></p>
+				</section>
+
+				<section class="block3 pop">
+					<h2>Your awesome<br> heading </h2>
+					<p class="stylep">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, ipsam tempora itaque fugit pariatur consequuntur quia placeat molestias! Est amet libero eos laborum necessitatibus quo a eligendi unde aperiam debitis.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, itaque, odio, ipsa, atque illo officiis voluptatum perferendis quod labore maiores impedit voluptatem ex porro! Unde fugit odit voluptatibus odio a. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, dignissimos ea similique cumque sed quisquam inventore laudantium vel amet pariatur. Non officia ea quisquam quas illo doloribus soluta illum numquam. <a href="https://thinkingsp0t.wordpress.com" target="_blank"> Read more </a></p>
+				</section>
+
+				<section class="block4 pop">
+					<h2>Your awesome<br> heading </h2>
+					<p class="stylep">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, ipsam tempora itaque fugit pariatur consequuntur quia placeat molestias! Est amet libero eos laborum necessitatibus quo a eligendi unde aperiam debitis.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, itaque, odio, ipsa, atque illo officiis voluptatum perferendis quod labore maiores impedit voluptatem ex porro! Unde fugit odit voluptatibus odio a. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, dignissimos ea similique cumque sed quisquam inventore laudantium vel amet pariatur. Non officia ea quisquam quas illo doloribus soluta illum numquam. <a href="https://thinkingsp0t.wordpress.com" target="_blank"> Read more </a></p>
+				</section>
+
+				<section class="block5 pop">
+					<h2>Your awesome<br> heading </h2>
+					<p class="stylep">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, ipsam tempora itaque fugit pariatur consequuntur quia placeat molestias! Est amet libero eos laborum necessitatibus quo a eligendi unde aperiam debitis.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, itaque, odio, ipsa, atque illo officiis voluptatum perferendis quod labore maiores impedit voluptatem ex porro! Unde fugit odit voluptatibus odio a. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, dignissimos ea similique cumque sed quisquam inventore laudantium vel amet pariatur. Non officia ea quisquam quas illo doloribus soluta illum numquam. <a href="https://thinkingsp0t.wordpress.com" target="_blank"> Read more </a></p>
+				</section>
+
+				<section class="block6 pop">
+					<h2>Your awesome<br> heading </h2>
+					<p class="stylep">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, ipsam tempora itaque fugit pariatur consequuntur quia placeat molestias! Est amet libero eos laborum necessitatibus quo a eligendi unde aperiam debitis.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, itaque, odio, ipsa, atque illo officiis voluptatum perferendis quod labore maiores impedit voluptatem ex porro! Unde fugit odit voluptatibus odio a. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, dignissimos ea similique cumque sed quisquam inventore laudantium vel amet pariatur. Non officia ea quisquam quas illo doloribus soluta illum numquam. <a href="https://thinkingsp0t.wordpress.com" target="_blank"> Read more </a></p>
+				</section>
+
+				<section class="block7 pop">
+					<h2>Your awesome<br> heading </h2>
+					<p class="stylep">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, ipsam tempora itaque fugit pariatur consequuntur quia placeat molestias! Est amet libero eos laborum necessitatibus quo a eligendi unde aperiam debitis.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, itaque, odio, ipsa, atque illo officiis voluptatum perferendis quod labore maiores impedit voluptatem ex porro! Unde fugit odit voluptatibus odio a. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, dignissimos ea similique cumque sed quisquam inventore laudantium vel amet pariatur. Non officia ea quisquam quas illo doloribus soluta illum numquam. <a href="https://thinkingsp0t.wordpress.com" target="_blank"> Read more </a></p>
+				</section>
+				<section class="block8 pop">
+					<h2>Your awesome<br> heading </h2>
+					<p class="stylep">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, ipsam tempora itaque fugit pariatur consequuntur quia placeat molestias! Est amet libero eos laborum necessitatibus quo a eligendi unde aperiam debitis.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, itaque, odio, ipsa, atque illo officiis voluptatum perferendis quod labore maiores impedit voluptatem ex porro! Unde fugit odit voluptatibus odio a. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, dignissimos ea similique cumque sed quisquam inventore laudantium vel amet pariatur. Non officia ea quisquam quas illo doloribus soluta illum numquam. <a href="https://thinkingsp0t.wordpress.com" target="_blank"> Read more </a></p>
+				</section>
+
+
+
+				</div>
+				<div id="footer">
+					<i class="fa fa-facebook-square fa-5x pop"> </i>
+					<i class="fa fa-twitter-square fa-5x pop"></i>
+					<i class="fa fa-flickr fa-5x pop"></i>
+					<i class="fa fa-pinterest fa-5x pop"></i>
+					<i class="fa fa-tumblr-square fa-5x pop"></i>
+				</div>
+			</div>
+		</body>
+		</html>
